# experiments

./: README.md
Compiler/Sample/: CMakeLists.txt  Sample.l  Sample.y  sample.cpp  sample_ast.cpp  sample_ast.hpp  sample_driver.cpp  sample_driver.hpp  sample_lab1.l
Compiler/Sample/test/: example1.out  example1.sm  example2.out  example2.sm  example3.out  example3.sm  example4.out  example4.sm  example5.out  example5.sm  example6.out  example6.sm
Compiler/exp/: exp1.cpp  test2.txt
Compiler/lab/: lab1.cpp  lab2.cpp  lab2.h
Compiler/review/: #编译原理期末考试试卷hm1.doc  Flex使用说明.docx  目录.TXT  第七章LR分析法 (1).ppt  第七章LR分析法.ppt  第三章文法和语言.ppt  第五章 自上而下的语法分析.ppt  第八章语法制导和中间代码生成.ppt  第六章自底向上优先分析.ppt  第十一章代码优化.ppt  第十章目标程序运行时的存储组织.ppt  第四章词法分析.ppt  编译原理实验报告模板.doc  编译原理实验报告要求.doc
Compiler/review/exp/: 实验报告模板.doc  第一章编译程序概论.ppt  第七章语法制导和中间代码生成.ppt  第三章词法分析.ppt  第九章目标程序运行时的存储组织.ppt  第二章文法和语言.ppt  第六章LR分析法.ppt  第十一章代码生成.ppt  第十章代码优化.ppt  第四章自顶向下语法分析方法.ppt
HPC&CC/Exp-1/: Exp1.sln  Exp1.vcxproj  kernel.cu
HPC&CC/Exp-2/: Exp-2.sln  Exp-2.vcxproj  main.cpp
computerSecurity/Exp-1/: 加密目的文件.txt  解密目的文件.txt
computerSecurity/Exp-3/: Exp-3.cpp  Exp-3.sln  Exp-3.vcxproj  Exp-3.vcxproj.filters  main.cpp
computerSecurity/review/: CryptoAPI简介.ppt  实验1：利用Windows CryptoAPI开发加解密工具软件.doc  实验2 wireshark实验报告模板.doc  实验2-sniffer工具的使用.doc  实验3 缓冲区溢出实验报告模板.doc  实验3-缓冲区溢出实验.doc  实验4-snort实验指导.doc  实验4-snort工具介绍.ppt  第3章 - 用户认证.ppt  第4章 - 访问控制.ppt  第5章－入侵检测.ppt  第6章－防火墙.ppt  第7章－恶意软件.ppt  第8章－数据库安全.ppt  第9章 - 缓冲区溢出.ppt  缓冲区溢出实验指导.ppt  计算机安全复习提纲.docx  计算机安全考试要点 - 计算机系.ppt  计算机病毒.docx
(+18 files in other folders)
